--- a/src/AutoLike.Domain/AutoLike.Domain.csproj
+++ b/src/AutoLike.Domain/AutoLike.Domain.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Emailing" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="5.3.2" />
+    <PackageReference Include="Volo.Abp.MongoDB" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.IdentityServer.Domain" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.IdentityServer" Version="5.3.2" />
