--- a/src/AutoLike.Application/AutoLike.Application.csproj
+++ b/src/AutoLike.Application/AutoLike.Application.csproj
@@ -13,16 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.InMemory" Version="0.3.4" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="5.3.2" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="5.3.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Transactions\" />
   </ItemGroup>
 
 </Project>
