--- a/src/AutoLike.Application/AutoLike.Application.csproj
+++ b/src/AutoLike.Application/AutoLike.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Crc32.NET" Version="1.2.0" />
     <PackageReference Include="Hangfire.InMemory" Version="0.3.4" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="5.3.2" />
