signin with QR Code

--- a/src/AutoLike.DbMigrator/appsettings.json
+++ b/src/AutoLike.DbMigrator/appsettings.json
@@ -9,7 +9,8 @@
         "ClientSecret": "1q2w3e*",
         "RootUrl": "https://localhost:44383"
       },
-      "AutoLike_App": {
+      "AutoLike_App": { 
+        "GrantType": "qrcode",
         "ClientId": "AutoLike_App",
         "ClientSecret": "1q2w3e*",
         "RootUrl": "http://localhost:4200"
