--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -17,4 +17,9 @@
   "StringEncryption": {
     "DefaultPassPhrase": "9ht3QWCWTXm260sp"
   }
+  "Settings": {
+    "TimeDeposit": 1,
+    "MinDepositAmount": 1000000
+  }
+
 }
