--- a/src/AutoLike.Application/AutoLike.Application.csproj
+++ b/src/AutoLike.Application/AutoLike.Application.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.3.2" />
+    <PackageReference Include="Volo.Abp.Sms" Version="5.3.3" />
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="5.3.2" />
