--- a/src/AutoLike.IdentityServer/AutoLike.IdentityServer.csproj
+++ b/src/AutoLike.IdentityServer/AutoLike.IdentityServer.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="5.3.2" />
+    <ProjectReference Include="..\AutoLike.Application.Contracts\AutoLike.Application.Contracts.csproj" />
     <ProjectReference Include="..\AutoLike.MongoDB\AutoLike.MongoDB.csproj" />
   </ItemGroup>
 
