--- a/src/AutoLike.IdentityServer/appsettings.json
+++ b/src/AutoLike.IdentityServer/appsettings.json
@@ -1,16 +1,16 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44315",
-    "ClientUrl": "http://localhost:4200",
-    "CorsOrigins": "https://*.AutoLike.com,http://localhost:4200,https://localhost:44347,https://localhost:44369",
-    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44383,https://localhost:44347,https://localhost:44336"
+    "SelfUrl": "https://localhost:6000",
+    "ClientUrl": "http://localhost:6001",
+    "CorsOrigins": "https://*.AutoLike.com,http://localhost:6002,https://localhost:6001,http://localhost:6001",
+    "RedirectAllowedUrls": "http://localhost:6002,https://localhost:6001,https://localhost:44347,https://localhost:44336"
   },
   "ConnectionStrings": {
     "Default": "mongodb://localhost:27017/AutoLike"
   },
-  "Redis": {
-    "Configuration": "127.0.0.1"
-  },
+  //"Redis": {
+  //  "Configuration": "127.0.0.1"
+  //},
   "StringEncryption": {
     "DefaultPassPhrase": "9ht3QWCWTXm260sp"
   }
