--- a/src/AutoLike.IdentityServer/appsettings.json
+++ b/src/AutoLike.IdentityServer/appsettings.json
@@ -1,12 +1,12 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:6000",
-    "ClientUrl": "http://localhost:6001",
-    "CorsOrigins": "https://*.AutoLike.com,http://localhost:6002,https://localhost:6001,http://localhost:6001",
-    "RedirectAllowedUrls": "http://localhost:6002,https://localhost:6001,https://localhost:44347,https://localhost:44336"
+    "SelfUrl": "https://localhost:10001",
+    "ClientUrl": "http://localhost:10002",
+    "CorsOrigins": "https://*.AutoLike.com,http://localhost:10002,https://localhost:10001,http://localhost:10001",
+    "RedirectAllowedUrls": "http://localhost:6002,https://localhost:10002,https://localhost:10002,https://localhost:44336"
   },
   "ConnectionStrings": {
-    "Default": "mongodb://localhost:27017/AutoLike"
+    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8"
   },
   //"Redis": {
   //  "Configuration": "127.0.0.1"
