--- a/src/AutoLike.DbMigrator/appsettings.json
+++ b/src/AutoLike.DbMigrator/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "mongodb://localhost:27017/AutoLike"
-  },
+    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
+  }, 
   "IdentityServer": {
     "Clients": {
       "AutoLike_Web": {
