--- a/src/AutoLike.IdentityServer/appsettings.json
+++ b/src/AutoLike.IdentityServer/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:6002,https://localhost:10002,https://localhost:10002,https://localhost:44336"
   },
   "ConnectionStrings": {
-    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8"
+    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
   },
   //"Redis": {
   //  "Configuration": "127.0.0.1"
