--- a/src/AutoLike.IdentityServer/appsettings.json
+++ b/src/AutoLike.IdentityServer/appsettings.json
@@ -1,9 +1,9 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:10001",
-    "ClientUrl": "http://localhost:10002",
-    "CorsOrigins": "https://*.AutoLike.com,http://localhost:10002,https://localhost:10001,http://localhost:10001",
-    "RedirectAllowedUrls": "http://localhost:6002,https://localhost:10002,https://localhost:10002,https://localhost:44336"
+    "SelfUrl": "http://0.0.0.0:10001",
+    "ClientUrl": "http://0.0.0.0:10002",
+    "CorsOrigins": "http://0.0.0.0:10002",
+    "RedirectAllowedUrls": "http://0.0.0.0:10002"
   },
   "ConnectionStrings": {
     "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
