--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -3,13 +3,13 @@
     "CorsOrigins": "https://*.AutoLike.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "mongodb://localhost:27017/AutoLike"
+    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
   },
-  "Redis": {
-    "Configuration": "127.0.0.1"
-  },
+  //"Redis": {
+  //  "Configuration": "127.0.0.1"
+  //},
   "AuthServer": {
-    "Authority": "https://localhost:44315",
+    "Authority": "http://0.0.0.0:10001",
     "RequireHttpsMetadata": "true",
     "SwaggerClientId": "AutoLike_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
@@ -20,6 +20,5 @@
   "Settings": {
     "TimeDeposit": 1,
     "MinDepositAmount": 1000000
-  }
-
+  } 
 }
