--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -10,7 +10,7 @@
   //},
   "AuthServer": {
     "Authority": "http://0.0.0.0:10001",
-    "RequireHttpsMetadata": "true",
+    "RequireHttpsMetadata": "false",
     "SwaggerClientId": "AutoLike_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
   },
