--- a/src/AutoLike.DbMigrator/appsettings.json
+++ b/src/AutoLike.DbMigrator/appsettings.json
@@ -9,11 +9,11 @@
         "ClientSecret": "1q2w3e*",
         "RootUrl": "https://localhost:44383"
       },
-      "AutoLike_App": { 
+      "AutoLike_App": {
         "GrantType": "qrcode",
         "ClientId": "AutoLike_App",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "http://localhost:4200"
+        "RootUrl": "http://149.28.192.142:10003"
       },
       "AutoLike_BlazorServerTiered": {
         "ClientId": "AutoLike_BlazorServerTiered",
@@ -23,7 +23,7 @@
       "AutoLike_Swagger": {
         "ClientId": "AutoLike_Swagger",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44369"
+        "RootUrl": "http://149.28.192.142:10002"
       }
     }
   }
