--- a/src/AutoLike.DbMigrator/appsettings.json
+++ b/src/AutoLike.DbMigrator/appsettings.json
@@ -7,7 +7,7 @@
       "AutoLike_Web": {
         "ClientId": "AutoLike_Web",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44383"
+        "RootUrl": "http://149.28.192.142:10003"
       },
       "AutoLike_App": {
         "GrantType": "qrcode",
