--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -1,6 +1,9 @@
 {
   "App": {
-    "CorsOrigins": "https://*.AutoLike.com,http://localhost:4200"
+    "SelfUrl": "http://149.28.192.142:10002",
+    "ClientUrl": "http://149.28.192.142:10002",
+    "CorsOrigins": "http://149.28.192.142:10001,http://149.28.192.142:10002,http://149.28.192.142:10003,http://149.28.192.142:10004",
+    "RedirectAllowedUrls": "http://149.28.192.142:10002,http://149.28.192.142:10001,http://149.28.192.142:10003,http://149.28.192.142:10004"
   },
   "ConnectionStrings": {
     "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
