--- a/src/AutoLike.HttpApi.Host/Properties/launchSettings.json
+++ b/src/AutoLike.HttpApi.Host/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44369",
-      "sslPort": 44369
+      "applicationUrl": "http://localhost:10002", 
     }
   },
   "profiles": {
