--- a/src/AutoLike.HttpApi.Host/appsettings.secrets.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.secrets.json
@@ -1,2 +1,12 @@
 {
+  "ConnectionStrings": {
+    "Default": "mongodb://localhost:27017/AutoLikeV8?authSource=admin"
+  },
+
+  "AuthServer": {
+    "Authority": "http://localhost:10001",
+    "RequireHttpsMetadata": "false",
+    "SwaggerClientId": "AutoLike_Swagger",
+    "SwaggerClientSecret": "1q2w3e*"
+  }
 }
