--- a/src/AutoLike.IdentityServer/Properties/launchSettings.json
+++ b/src/AutoLike.IdentityServer/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44315",
-      "sslPort": 44315
+      "applicationUrl": "http://localhost:10001", 
     }
   },
   "profiles": {
