--- a/src/AutoLike.Application/AutoLike.Application.csproj
+++ b/src/AutoLike.Application/AutoLike.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -14,7 +14,6 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire.InMemory" Version="0.3.4" />
-    <PackageReference Include="Volo.Abp.Account.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.3.2" />
