dis allow creadntiasl

--- a/src/AutoLike.IdentityServer/appsettings.json
+++ b/src/AutoLike.IdentityServer/appsettings.json
@@ -2,7 +2,7 @@
   "App": {
     "SelfUrl": "http://149.28.192.142:10001",
     "ClientUrl": "http://149.28.192.142:10002",
-    "CorsOrigins": "http://149.28.192.142:10002",
+    "CorsOrigins": "http://149.28.192.142:10002,http://localhost:3000,http://149.28.192.142:10003",
     "RedirectAllowedUrls": "http://149.28.192.142:10002,http://149.28.192.142:10001,http://149.28.192.142:10003,http://149.28.192.142:10004"
   },
   "ConnectionStrings": {
