--- a/src/AutoLike.HttpApi.Host/appsettings.secrets.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.secrets.json
@@ -1,2 +1,27 @@
-{ 
+{
+  "App": {
+    "SelfUrl": "http://149.28.192.142:10002",
+    "ClientUrl": "http://149.28.192.142:10002",
+    "CorsOrigins": "http://localhost:3000,http://149.28.192.142:10001,http://149.28.192.142:10002,http://149.28.192.142:10003,http://149.28.192.142:10004",
+    "RedirectAllowedUrls": "http://149.28.192.142:10002,http://149.28.192.142:10001,http://149.28.192.142:10003,http://149.28.192.142:10004"
+  },
+  "ConnectionStrings": {
+    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
+  },
+  //"Redis": {
+  //  "Configuration": "127.0.0.1"
+  //},
+  "AuthServer": {
+    "Authority": "http://149.28.192.142:10001",
+    "RequireHttpsMetadata": "false",
+    "SwaggerClientId": "AutoLike_Swagger",
+    "SwaggerClientSecret": "1q2w3e*"
+  },
+  "StringEncryption": {
+    "DefaultPassPhrase": "9ht3QWCWTXm260sp"
+  },
+  "Settings": {
+    "TimeDeposit": 1,
+    "MinDepositAmount": 1000000
+  }
 }
