--- a/src/AutoLike.IdentityServer/appsettings.Development.json
+++ b/src/AutoLike.IdentityServer/appsettings.Development.json
@@ -1,2 +1,17 @@
 {
+  "App": {
+    "SelfUrl": "http://149.28.192.142:10001",
+    "ClientUrl": "http://149.28.192.142:10002",
+    "CorsOrigins": "http://149.28.192.142:10002,http://localhost:3000,http://149.28.192.142:10003",
+    "RedirectAllowedUrls": "http://149.28.192.142:10002,http://149.28.192.142:10001,http://149.28.192.142:10003,http://149.28.192.142:10004"
+  },
+  "ConnectionStrings": {
+    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
+  },
+  //"Redis": {
+  //  "Configuration": "127.0.0.1"
+  //},
+  "StringEncryption": {
+    "DefaultPassPhrase": "9ht3QWCWTXm260sp"
+  }
 }
