--- a/src/AutoLike.Application/AutoLike.Application.csproj
+++ b/src/AutoLike.Application/AutoLike.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire.InMemory" Version="0.3.4" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="5.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.3.2" />
