--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -22,6 +22,7 @@
   },
   "Settings": {
     "TimeDeposit": 1,
-    "MinDepositAmount": 1000000
+    "MinDepositAmount": 1000000,
+    "Abp.Timing.TimeZone": "Europe/London"
   } 
 }
