--- a/src/AutoLike.IdentityServer/AutoLike.IdentityServer.csproj
+++ b/src/AutoLike.IdentityServer/AutoLike.IdentityServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -12,6 +12,7 @@
     <MvcRazorExcludeRefAssembliesFromPublish>false</MvcRazorExcludeRefAssembliesFromPublish>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>AutoLike-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
+	  <AssemblyName>identity.autolike.cc</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +20,16 @@
     <Content Remove="Logs\**" />
     <EmbeddedResource Remove="Logs\**" />
     <None Remove="Logs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="identity.autolike.cc.service" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="identity.autolike.cc.service">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
