--- a/src/AutoLike.HttpApi/AutoLike.HttpApi.csproj
+++ b/src/AutoLike.HttpApi/AutoLike.HttpApi.csproj
@@ -5,6 +5,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>AutoLike</RootNamespace>
+	  <AssemblyName>api8.autolike.cc</AssemblyName>
+
   </PropertyGroup>
 
   <ItemGroup>
