--- a/src/AutoLike.HttpApi.Host/AutoLike.HttpApi.Host.csproj
+++ b/src/AutoLike.HttpApi.Host/AutoLike.HttpApi.Host.csproj
@@ -7,6 +7,8 @@
     <RootNamespace>AutoLike</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>AutoLike-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
+	  <AssemblyName>api8.autolike.cc</AssemblyName>
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,6 +34,16 @@
     <Content Remove="Logs\**" />
     <EmbeddedResource Remove="Logs\**" />
     <None Remove="Logs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="api8.autolike.cc.service" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="api8.autolike.cc.service">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
