--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -7,7 +7,10 @@
   },
   "ConnectionStrings": {
     "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
-  }, 
+  },
+  //"Redis": {
+  //  "Configuration": "127.0.0.1"
+  //},
   "AuthServer": {
     "Authority": "http://149.28.192.142:10001",
     "RequireHttpsMetadata": "false",
@@ -16,5 +19,9 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "9ht3QWCWTXm260sp"
+  },
+  "Settings": {
+    "TimeDeposit": 1,
+    "MinDepositAmount": 1000000
   }
 }
