--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -5,12 +5,12 @@
     "CorsOrigins": "http://localhost:3000,http://62.112.8.24:10001,http://62.112.8.24:10002,http://62.112.8.24:10003,http://62.112.8.24:10004",
     "RedirectAllowedUrls": "http://62.112.8.24:10002,http://62.112.8.24:10001,http://62.112.8.24:10003,http://62.112.8.24:10004"
   },
-  //"ConnectionStrings": {
-  //  "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
-  //},
-  //"Redis": {
-  //  "Configuration": "127.0.0.1"
-  //},
+  "ConnectionStrings": {
+    "Default": "mongodb://admin:fukSkNQngNpPG6e@62.112.8.24:27017/AutoLikeV8?authSource=admin"
+  },
+  "Redis": {
+    "Configuration": "127.0.0.1"
+  },
   "AuthServer": {
     "Authority": "http://62.112.8.24:10001",
     "RequireHttpsMetadata": "false",
