--- a/src/AutoLike.IdentityServer/appsettings.json
+++ b/src/AutoLike.IdentityServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "SelfUrl": "http://62.112.8.24:10001",
+    "SelfUrl": "https://id.autolike.cc",
     "ClientUrl": "http://62.112.8.24:10002",
     "CorsOrigins": "http://62.112.8.24:10002,http://localhost:3000,http://62.112.8.24:10003",
     "RedirectAllowedUrls": "http://62.112.8.24:10002,http://62.112.8.24:10001,http://62.112.8.24:10003,http://62.112.8.24:10004"
