--- a/src/AutoLike.HttpApi.Host/appsettings.json
+++ b/src/AutoLike.HttpApi.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "SelfUrl": "http://62.112.8.24:10002",
+    "SelfUrl": "https://api8.autolike.cc",
     "ClientUrl": "http://62.112.8.24:10003",
     "CorsOrigins": "http://localhost:3000,http://62.112.8.24:10001,http://62.112.8.24:10002,http://62.112.8.24:10003,http://62.112.8.24:10002",
     "RedirectAllowedUrls": "http://62.112.8.24:10002,http://62.112.8.24:10001,http://62.112.8.24:10003,http://62.112.8.24:10002"
@@ -12,7 +12,7 @@
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "http://62.112.8.24:10001",
+    "Authority": "https://id.autolike.cc",
     "RequireHttpsMetadata": "false",
     "SwaggerClientId": "AutoLike_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
